      missing-pkg-php-tools-addon phpcomposer, thanks to
      David Prévot (Closes: #754738).
  * checks/source-copyright.{desc,pm}:
    + [BR] Add a pedantic warning about non dep-5 debian/copyright.
    + [BR] Detect empty required fields.  (Closes: #748452).
    + [BR] Detect undefined license.  (Closes: #733659).
  * checks/testsuite.desc:
    + [BR] Update ref url.  (Closes: #755275).

  * data/cruft/warn-file-type:
    + [BR] Add debug source suffix for detecting javascript
      source-is-missing and improve test suite. Fix a
      false postive in mono.
  * data/files/js-libraries:
    + [BR] Apply patch from Paul Wise for detection of
      libjs-excanvas.
  * data/files/privacy-breaker-website:
    + [BR] Improve detection of sourceforge logos.
    + [BR] Detect libjs-jquery use.
    + [BR] Detect libjs-mathjax use.
    + [BR] Add count.digitalpoint.com to statistics website.
    + [BR] Add xoom.com to privacy-breach-donation (used by
      freesci-doc package).
    + [BR] Detect libjs-jquery-ui use.
    + [BR] Detect pledgie.com as a donation website.
  * data/debhelper/dh_commands:
    + [BR] Add patch from  Piotr Ożarowski, dh-python2
      moved to dh-python package (Closes: #740161).

  * doc/tutorial/Lintian/Tutorial/WritingChecks.pod:
    + [NT] Correct tutorial now that the "index" collection
      is gone.

 -- Niels Thykier <niels@thykier.net>  Sun, 13 Jul 2014 21:04:57 +0200

lintian (2.5.25) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - capitalization-error-in-description-synopsis
      - incorrect-naming-of-pkcs11-module
      - package-contains-thumbnails-dir
      - pkg-config-bad-directive
      - source-contains-prebuilt-ms-help-file
      - spelling-error-in-description-synopsis

  * checks/*.desc:
    + [NT] Replaced "index" with "unpacked" in Needs-Info.
  * checks/cruft.{desc,pm}:
    + [BR] Add a forgotten return statement, and avoid
      false positive for deployJava.js (Closes: #745152).