@@ -31,6 +31,13 @@ Info: The extended description (the lines after the first line of the
  "Description:" field) is empty.
 Ref: policy 3.4
 
+Tag: description-too-short
+Severity: serious
+Certainty: certain
+Ref: devref 6.2.2
+Info: The description contains only a single word. It is likely that the
+ description won't be very clear for the user.
+
 Tag: extended-description-is-probably-too-short
 Severity: minor
 Certainty: possible
